--- a/index.css
+++ b/index.css
@@ -1,47 +1,69 @@
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-body{
-    margin: 0;
-    font-family: 'Times New Roman', Times, serif;
-    background-color: aliceblue;
-    color: #000000;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+body {
+  margin: 0;
+  font-family: "Times New Roman", Times, serif;
+  background-color: aliceblue;
+  color: #000000;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-header{
-    margin-top: 20px;
+header {
+  margin-top: 20px;
+  font-weight: bold;
 }
 
-#board{
-    width: 469px;
-    height: 432px;
-    display: grid;
-    grid-template-columns: repeat(5,1fr);
-    grid-gap: 10px;
-    text-align: center;
-    padding: 10px;
+#board {
+  background-color: #e3d01d;
+  width: 555px;
+  height: 450px;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 10px;
+  text-align: center;
+  padding: 10px;
+  margin: auto;
 }
 
 #board > div {
-    background-repeat: no-repeat;
-    background-color: #E3D01D ;
-    background-size: cover;
-    width: 82px;
-    height: 90px;
-    position: relative;
-    z-index: 1;
+  width: 100px;
+  height: 100px;
+  border: 2px solid #000000;
+  border-radius: 5px;
+  font-size: 2em;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
 }
 
-button{
-    margin-top: 8px;
-    width: 115px;
-    height: 60px;
-    background-color: #4644d3;
-    font-size: 16px;
-    border-radius: 10px;
+#board > div:hover {
+  background-color: white;
+}
+
+#message {
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+#timer {
+  font-size: 20px;
+  font-weight: bold;
+  margin-top: 20px;
+}
+
+button {
+  margin-top: 8px;
+  width: 115px;
+  height: 60px;
+  background-color: #4644d3;
+  font-size: 16px;
+  border-radius: 10px;
 }
