--- a/index.css
+++ b/index.css
@@ -4,66 +4,72 @@
 
 body {
   margin: 0;
-  font-family: "Times New Roman", Times, serif;
+  font-family: 'Times New Roman', Times, serif;
   background-color: aliceblue;
   color: #000000;
-  height: 100%;
+  height: 100vh; /* Change to viewport height */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
 header {
   margin-top: 20px;
   font-weight: bold;
 }
 
 #board {
-  background-color: #e3d01d;
-  width: 555px;
-  height: 450px;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-gap: 10px;
-  text-align: center;
-  padding: 10px;
-  margin: auto;
+ background-color: #E3D01D;
+ width: 555px;
+ height: 450px;
+ display: grid;
+ grid-template-columns: repeat(5, 1fr);
+ grid-gap: 10px;
+ text-align: center;
+ padding: 10px;
+ margin: auto;
+ overflow: hidden;
 }
 
-#board > div {
-  width: 100px;
-  height: 100px;
-  border: 2px solid #000000;
-  border-radius: 5px;
-  font-size: 2em;
-  display: flex;
-  position: relative;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
+.card {
+ width: 100%;
+ height: 100%;
+ position: relative;
+ perspective: 1000px;
+ font-size: 2.5em;
+ align-items: center;
+ border: 2px solid #000000;
+ border-radius: 5px;
+ box-sizing: border-box;
+ cursor: pointer;
 }
 
-#board > div:hover {
-  background-color: white;
+.card.flip {
+ transform: rotateY(180deg);
 }
 
-#message {
-  font-size: 20px;
-  font-weight: bold;
-  margin-top: 20px;
+#message,
+h1 {
+ font-size: 0.8em;
+ font-weight: medium;
+ margin-top: 10px;
 }
 
 #timer {
-  font-size: 20px;
-  font-weight: bold;
-  margin-top: 20px;
+ font-size: 0.8em;
+ font-weight: medium;
+ margin-top: 10px;
+ color: red;
 }
 
 button {
-  margin-top: 8px;
-  width: 115px;
-  height: 60px;
-  background-color: #4644d3;
-  font-size: 16px;
-  border-radius: 10px;
+ margin-top: 8px;
+ width: 20vmin;
+ height: 8vmin;
+ background-color: #4644d3;
+ font-size: 2vmin;
+ font-weight: bold;
+ border-radius: 10px;
+ box-shadow: 3px 3px 5px #666;
 }
