--- a/index.css
+++ b/index.css
@@ -4,28 +4,35 @@
 
 body {
   margin: 0;
-  font-family: 'Times New Roman', Times, serif;
-  background-color: aliceblue;
+  font-family: "Roboto Mono", monospace;
   color: #000000;
-  height: 100vh; /* Change to viewport height */
+  height: auto; 
   display: flex;
+  background-color: #52ACFF;
+  background-image: linear-gradient(180deg, #52ACFF 12%,  50%, #630606 100%);
+  background-attachment: fixed;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+@media screen and (max-width: 768px) {
+  body {
+    align-items: center;
+  }
+}
 
 header {
-  margin-top: 20px;
-  font-weight: bold;
+  margin-top: 4vmin;
+  font-weight: 700;
 }
 
 #board {
  background-color: #E3D01D;
- width: 555px;
- height: 450px;
+ width: 96vmin;
+ height: auto;
  display: grid;
- grid-template-columns: repeat(5, 1fr);
- grid-gap: 10px;
+ grid-template-columns: repeat(5, 17.3vmin);
+ grid-gap: 1.5vmin;
  text-align: center;
  padding: 10px;
  margin: auto;
@@ -33,11 +40,9 @@ header {
 }
 
 .card {
- width: 100%;
- height: 100%;
+ width: 17.4vmin;
+ height: 17.4vmin;
  position: relative;
- perspective: 1000px;
- font-size: 2.5em;
  align-items: center;
  border: 2px solid #000000;
  border-radius: 5px;
@@ -51,25 +56,39 @@ header {
 
 #message,
 h1 {
- font-size: 0.8em;
- font-weight: medium;
- margin-top: 10px;
+ font-size: 2vmin;
+ font-weight: 400;
+ margin-top: 1vmin;
+ margin-bottom: 2vmin;
+ 
 }
-
+#message {
+  height: 2vmin;
+  color: #16150d;
+}
 #timer {
- font-size: 0.8em;
+ font-size: 2vmin;
  font-weight: medium;
- margin-top: 10px;
+ margin-top: 1vmin;
  color: red;
 }
 
+#button-container {
+  margin-top: 2vmin;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
 button {
- margin-top: 8px;
+ margin-top: 2vmin;
  width: 20vmin;
  height: 8vmin;
  background-color: #4644d3;
  font-size: 2vmin;
- font-weight: bold;
+ font-weight: 700;
  border-radius: 10px;
  box-shadow: 3px 3px 5px #666;
+ margin-bottom: 2vmin;
 }
