--- a/index.css
+++ b/index.css
@@ -24,6 +24,7 @@ body {
 header {
   margin-top: 4vmin;
   font-weight: 700;
+  
 }
 
 #board {
@@ -64,7 +65,9 @@ h1 {
 }
 #message {
   height: 2vmin;
-  color: #16150d;
+  color: #d9c846;
+  font-size: 3vmin;
+  margin-bottom: 4vmin;
 }
 #timer {
  font-size: 2vmin;
